diesel_compile_tests/tests/fail/window_functions_expression_requires_window_function.stderr
error[E0277]: `diesel::sql_types::Text` is neither `diesel::sql_types::Range<_>` nor `diesel::sql_types::Multirange<_>`
    --> tests/fail/window_functions_expression_requires_window_function.rs:15:25
     |
  LL |     users::table.select(lower(users::name).partition_by(users::id));
     |                         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
     = help: the trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable` is not implemented for `diesel::sql_types::Text`
     = note: try to provide an expression that produces one of the expected sql types
help: the following other types implement trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable`
    --> DIESEL/diesel/diesel/src/pg/expression/expression_methods.rs
     |
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Range<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::sql_types::Range<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Range<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<diesel::sql_types::Range<ST>>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Multirange<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Multirange<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Multirange<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<Multirange<ST>>`
note: required by a bound in `diesel::dsl::lower`
    --> DIESEL/diesel/diesel/src/pg/expression/functions.rs
     |
 LL |     fn lower<R: MultirangeOrRangeMaybeNullable + SingleValue>(range: R) -> Nullable<R::Inn...
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `lower`

error[E0277]: `lower<Text, name>` is not a window function
  --> tests/fail/window_functions_expression_requires_window_function.rs:15:44
   |
LL |     users::table.select(lower(users::name).partition_by(users::id));
   |                                            ^^^^^^^^^^^^ remove this function call to use `lower<Text, name>` as normal SQL function
   |
   = help: the trait `IsWindowFunction` is not implemented for `lower<Text, name>`
   = note: try removing any method call to `WindowExpressionMethods` and use it as normal SQL function
   = help: the following other types implement trait `IsWindowFunction`:
             diesel::expression::count::count_utils::count<T, expr>
             avg<ST, expr>
             sum<ST, expr>
             max<ST, expr>
             min<ST, expr>
             cume_dist
             dense_rank
             first_value<T, value>
           and N others
   = note: required for `lower<Text, name>` to implement `PartitionByDsl<_>`

   
error[E0277]: `lower<Text, name>` is not a window function
  --> tests/fail/window_functions_expression_requires_window_function.rs:15:18
   |
LL |     users::table.select(lower(users::name).partition_by(users::id));
   |                  ^^^^^^ remove this function call to use `lower<Text, name>` as normal SQL function
   |
   = help: the trait `IsWindowFunction` is not implemented for `lower<Text, name>`
   = note: try removing any method call to `WindowExpressionMethods` and use it as normal SQL function
   = help: the following other types implement trait `IsWindowFunction`:
             diesel::expression::count::count_utils::count<T, expr>
             avg<ST, expr>
             sum<ST, expr>
             max<ST, expr>
             min<ST, expr>
             cume_dist
             dense_rank
             first_value<T, value>
           and N others
   = note: required for `AggregateExpression<..., ..., ..., ..., ...>` to implement `ValidGrouping<()>`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `SelectDsl<AggregateExpression<..., ..., ..., ..., ...>>`

   
error[E0277]: `diesel::sql_types::Text` is neither `diesel::sql_types::Range<_>` nor `diesel::sql_types::Multirange<_>`
    --> tests/fail/window_functions_expression_requires_window_function.rs:15:18
     |
  LL |     users::table.select(lower(users::name).partition_by(users::id));
     |                  ^^^^^^ unsatisfied trait bound
     |
     = help: the trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable` is not implemented for `diesel::sql_types::Text`
     = note: try to provide an expression that produces one of the expected sql types
help: the following other types implement trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable`
    --> DIESEL/diesel/diesel/src/pg/expression/expression_methods.rs
     |
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Range<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::sql_types::Range<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Range<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<diesel::sql_types::Range<ST>>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Multirange<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Multirange<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Multirange<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<Multirange<ST>>`
     = note: required for `lower<Text, name>` to implement `diesel::Expression`
     = note: 1 redundant requirement hidden
     = note: required for `AggregateExpression<..., ..., ..., ..., ...>` to implement `diesel::Expression`
     = note: required for `users::table` to implement `SelectDsl<AggregateExpression<..., ..., ..., ..., ...>>`
  
     
error[E0277]: `diesel::sql_types::Text` is neither `diesel::sql_types::Range<_>` nor `diesel::sql_types::Multirange<_>`
    --> tests/fail/window_functions_expression_requires_window_function.rs:21:25
     |
  LL |     users::table.select(lower(users::name).over());
     |                         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
     = help: the trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable` is not implemented for `diesel::sql_types::Text`
     = note: try to provide an expression that produces one of the expected sql types
help: the following other types implement trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable`
    --> DIESEL/diesel/diesel/src/pg/expression/expression_methods.rs
     |
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Range<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::sql_types::Range<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Range<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<diesel::sql_types::Range<ST>>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Multirange<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Multirange<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Multirange<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<Multirange<ST>>`
note: required by a bound in `diesel::dsl::lower`
    --> DIESEL/diesel/diesel/src/pg/expression/functions.rs
     |
 LL |     fn lower<R: MultirangeOrRangeMaybeNullable + SingleValue>(range: R) -> Nullable<R::Inn...
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `lower`

error[E0277]: `lower<Text, name>` is not a window function
  --> tests/fail/window_functions_expression_requires_window_function.rs:21:44
   |
LL |     users::table.select(lower(users::name).over());
   |                                            ^^^^ remove this function call to use `lower<Text, name>` as normal SQL function
   |
   = help: the trait `IsWindowFunction` is not implemented for `lower<Text, name>`
   = note: try removing any method call to `WindowExpressionMethods` and use it as normal SQL function
   = help: the following other types implement trait `IsWindowFunction`:
             diesel::expression::count::count_utils::count<T, expr>
             avg<ST, expr>
             sum<ST, expr>
             max<ST, expr>
             min<ST, expr>
             cume_dist
             dense_rank
             first_value<T, value>
           and N others
   = note: required for `lower<Text, name>` to implement `OverDsl`

   
error[E0277]: `lower<Text, name>` is not a window function
  --> tests/fail/window_functions_expression_requires_window_function.rs:21:18
   |
LL |     users::table.select(lower(users::name).over());
   |                  ^^^^^^ remove this function call to use `lower<Text, name>` as normal SQL function
   |
   = help: the trait `IsWindowFunction` is not implemented for `lower<Text, name>`
   = note: try removing any method call to `WindowExpressionMethods` and use it as normal SQL function
   = help: the following other types implement trait `IsWindowFunction`:
             diesel::expression::count::count_utils::count<T, expr>
             avg<ST, expr>
             sum<ST, expr>
             max<ST, expr>
             min<ST, expr>
             cume_dist
             dense_rank
             first_value<T, value>
           and N others
   = note: required for `AggregateExpression<..., ..., ..., ..., ...>` to implement `ValidGrouping<()>`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `SelectDsl<AggregateExpression<..., ..., ..., ..., ...>>`

   
error[E0277]: `diesel::sql_types::Text` is neither `diesel::sql_types::Range<_>` nor `diesel::sql_types::Multirange<_>`
    --> tests/fail/window_functions_expression_requires_window_function.rs:21:18
     |
  LL |     users::table.select(lower(users::name).over());
     |                  ^^^^^^ unsatisfied trait bound
     |
     = help: the trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable` is not implemented for `diesel::sql_types::Text`
     = note: try to provide an expression that produces one of the expected sql types
help: the following other types implement trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable`
    --> DIESEL/diesel/diesel/src/pg/expression/expression_methods.rs
     |
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Range<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::sql_types::Range<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Range<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<diesel::sql_types::Range<ST>>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Multirange<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Multirange<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Multirange<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<Multirange<ST>>`
     = note: required for `lower<Text, name>` to implement `diesel::Expression`
     = note: 1 redundant requirement hidden
     = note: required for `AggregateExpression<..., ..., ..., ..., ...>` to implement `diesel::Expression`
     = note: required for `users::table` to implement `SelectDsl<AggregateExpression<..., ..., ..., ..., ...>>`
  
     
error[E0277]: `diesel::sql_types::Text` is neither `diesel::sql_types::Range<_>` nor `diesel::sql_types::Multirange<_>`
    --> tests/fail/window_functions_expression_requires_window_function.rs:27:25
     |
  LL |     users::table.select(lower(users::name).window_filter(users::id.eq(42)));
     |                         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
     = help: the trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable` is not implemented for `diesel::sql_types::Text`
     = note: try to provide an expression that produces one of the expected sql types
help: the following other types implement trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable`
    --> DIESEL/diesel/diesel/src/pg/expression/expression_methods.rs
     |
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Range<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::sql_types::Range<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Range<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<diesel::sql_types::Range<ST>>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Multirange<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Multirange<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Multirange<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<Multirange<ST>>`
note: required by a bound in `diesel::dsl::lower`
    --> DIESEL/diesel/diesel/src/pg/expression/functions.rs
     |
 LL |     fn lower<R: MultirangeOrRangeMaybeNullable + SingleValue>(range: R) -> Nullable<R::Inn...
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `lower`

error[E0277]: the trait bound `lower<Text, name>: IsAggregateFunction` is not satisfied
  --> tests/fail/window_functions_expression_requires_window_function.rs:27:44
   |
LL |     users::table.select(lower(users::name).window_filter(users::id.eq(42)));
   |                                            ^^^^^^^^^^^^^ the trait `IsAggregateFunction` is not implemented for `lower<Text, name>`
   |
   = help: the following other types implement trait `IsAggregateFunction`:
             diesel::expression::count::count_utils::count<T, expr>
             avg<ST, expr>
             sum<ST, expr>
             max<ST, expr>
             min<ST, expr>
             json_group_array<E, elements>
             json_group_object<N, V, names, values>
             jsonb_group_array<E, elements>
             jsonb_group_object<N, V, names, values>
   = note: required for `lower<Text, name>` to implement `FilterDsl<_>`

   
error[E0277]: `diesel::sql_types::Text` is neither `diesel::sql_types::Range<_>` nor `diesel::sql_types::Multirange<_>`
    --> tests/fail/window_functions_expression_requires_window_function.rs:27:18
     |
  LL |     users::table.select(lower(users::name).window_filter(users::id.eq(42)));
     |                  ^^^^^^ unsatisfied trait bound
     |
     = help: the trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable` is not implemented for `diesel::sql_types::Text`
     = note: try to provide an expression that produces one of the expected sql types
help: the following other types implement trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable`
    --> DIESEL/diesel/diesel/src/pg/expression/expression_methods.rs
     |
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Range<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::sql_types::Range<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Range<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<diesel::sql_types::Range<ST>>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Multirange<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Multirange<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Multirange<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<Multirange<ST>>`
     = note: required for `lower<Text, name>` to implement `diesel::Expression`
     = note: 1 redundant requirement hidden
     = note: required for `AggregateExpression<..., ..., ..., ...>` to implement `diesel::Expression`
     = note: required for `users::table` to implement `SelectDsl<AggregateExpression<..., ..., ..., ...>>`
  
     
error[E0277]: `diesel::sql_types::Text` is neither `diesel::sql_types::Range<_>` nor `diesel::sql_types::Multirange<_>`
    --> tests/fail/window_functions_expression_requires_window_function.rs:32:25
     |
  LL |     users::table.select(lower(users::name).window_order(users::id));
     |                         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
     = help: the trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable` is not implemented for `diesel::sql_types::Text`
     = note: try to provide an expression that produces one of the expected sql types
help: the following other types implement trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable`
    --> DIESEL/diesel/diesel/src/pg/expression/expression_methods.rs
     |
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Range<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::sql_types::Range<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Range<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<diesel::sql_types::Range<ST>>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Multirange<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Multirange<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Multirange<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<Multirange<ST>>`
note: required by a bound in `diesel::dsl::lower`
    --> DIESEL/diesel/diesel/src/pg/expression/functions.rs
     |
 LL |     fn lower<R: MultirangeOrRangeMaybeNullable + SingleValue>(range: R) -> Nullable<R::Inn...
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `lower`

error[E0277]: `lower<Text, name>` is not a window function
  --> tests/fail/window_functions_expression_requires_window_function.rs:32:44
   |
LL |     users::table.select(lower(users::name).window_order(users::id));
   |                                            ^^^^^^^^^^^^ remove this function call to use `lower<Text, name>` as normal SQL function
   |
   = help: the trait `IsWindowFunction` is not implemented for `lower<Text, name>`
   = note: try removing any method call to `WindowExpressionMethods` and use it as normal SQL function
   = help: the following other types implement trait `IsWindowFunction`:
             diesel::expression::count::count_utils::count<T, expr>
             avg<ST, expr>
             sum<ST, expr>
             max<ST, expr>
             min<ST, expr>
             cume_dist
             dense_rank
             first_value<T, value>
           and N others
   = note: required for `lower<Text, name>` to implement `OrderWindowDsl<_>`

   
error[E0277]: `lower<Text, name>` is not a window function
  --> tests/fail/window_functions_expression_requires_window_function.rs:32:18
   |
LL |     users::table.select(lower(users::name).window_order(users::id));
   |                  ^^^^^^ remove this function call to use `lower<Text, name>` as normal SQL function
   |
   = help: the trait `IsWindowFunction` is not implemented for `lower<Text, name>`
   = note: try removing any method call to `WindowExpressionMethods` and use it as normal SQL function
   = help: the following other types implement trait `IsWindowFunction`:
             diesel::expression::count::count_utils::count<T, expr>
             avg<ST, expr>
             sum<ST, expr>
             max<ST, expr>
             min<ST, expr>
             cume_dist
             dense_rank
             first_value<T, value>
           and N others
   = note: required for `AggregateExpression<..., ..., ..., ..., ...>` to implement `ValidGrouping<()>`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `SelectDsl<AggregateExpression<..., ..., ..., ..., ...>>`

   
error[E0277]: `diesel::sql_types::Text` is neither `diesel::sql_types::Range<_>` nor `diesel::sql_types::Multirange<_>`
    --> tests/fail/window_functions_expression_requires_window_function.rs:32:18
     |
  LL |     users::table.select(lower(users::name).window_order(users::id));
     |                  ^^^^^^ unsatisfied trait bound
     |
     = help: the trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable` is not implemented for `diesel::sql_types::Text`
     = note: try to provide an expression that produces one of the expected sql types
help: the following other types implement trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable`
    --> DIESEL/diesel/diesel/src/pg/expression/expression_methods.rs
     |
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Range<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::sql_types::Range<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Range<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<diesel::sql_types::Range<ST>>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Multirange<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Multirange<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Multirange<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<Multirange<ST>>`
     = note: required for `lower<Text, name>` to implement `diesel::Expression`
     = note: 1 redundant requirement hidden
     = note: required for `AggregateExpression<..., ..., ..., ..., ...>` to implement `diesel::Expression`
     = note: required for `users::table` to implement `SelectDsl<AggregateExpression<..., ..., ..., ..., ...>>`
  
     
error[E0277]: `diesel::sql_types::Text` is neither `diesel::sql_types::Range<_>` nor `diesel::sql_types::Multirange<_>`
    --> tests/fail/window_functions_expression_requires_window_function.rs:39:17
     |
  LL | ...   .select(lower(users::name).frame_by(frame::Rows.frame_start_with(frame::CurrentRow)));
     |               ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
     = help: the trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable` is not implemented for `diesel::sql_types::Text`
     = note: try to provide an expression that produces one of the expected sql types
help: the following other types implement trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable`
    --> DIESEL/diesel/diesel/src/pg/expression/expression_methods.rs
     |
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Range<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::sql_types::Range<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Range<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<diesel::sql_types::Range<ST>>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Multirange<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Multirange<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Multirange<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<Multirange<ST>>`
note: required by a bound in `diesel::dsl::lower`
    --> DIESEL/diesel/diesel/src/pg/expression/functions.rs
     |
 LL |     fn lower<R: MultirangeOrRangeMaybeNullable + SingleValue>(range: R) -> Nullable<R::Inn...
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `lower`

error[E0277]: `lower<Text, name>` is not a window function
  --> tests/fail/window_functions_expression_requires_window_function.rs:39:36
   |
LL |         .select(lower(users::name).frame_by(frame::Rows.frame_start_with(frame::CurrentRow)));
   |                                    ^^^^^^^^ remove this function call to use `lower<Text, name>` as normal SQL function
   |
   = help: the trait `IsWindowFunction` is not implemented for `lower<Text, name>`
   = note: try removing any method call to `WindowExpressionMethods` and use it as normal SQL function
   = help: the following other types implement trait `IsWindowFunction`:
             diesel::expression::count::count_utils::count<T, expr>
             avg<ST, expr>
             sum<ST, expr>
             max<ST, expr>
             min<ST, expr>
             cume_dist
             dense_rank
             first_value<T, value>
           and N others
   = note: required for `lower<Text, name>` to implement `FrameDsl<_>`

   
error[E0277]: `lower<Text, name>` is not a window function
  --> tests/fail/window_functions_expression_requires_window_function.rs:39:10
   |
LL |         .select(lower(users::name).frame_by(frame::Rows.frame_start_with(frame::CurrentRow)));
   |          ^^^^^^ remove this function call to use `lower<Text, name>` as normal SQL function
   |
   = help: the trait `IsWindowFunction` is not implemented for `lower<Text, name>`
   = note: try removing any method call to `WindowExpressionMethods` and use it as normal SQL function
   = help: the following other types implement trait `IsWindowFunction`:
             diesel::expression::count::count_utils::count<T, expr>
             avg<ST, expr>
             sum<ST, expr>
             max<ST, expr>
             min<ST, expr>
             cume_dist
             dense_rank
             first_value<T, value>
           and N others
   = note: required for `AggregateExpression<..., ..., ..., ..., ...>` to implement `ValidGrouping<()>`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `SelectDsl<AggregateExpression<..., ..., ..., ..., ...>>`

   
error[E0277]: `diesel::sql_types::Text` is neither `diesel::sql_types::Range<_>` nor `diesel::sql_types::Multirange<_>`
    --> tests/fail/window_functions_expression_requires_window_function.rs:39:10
     |
  LL | ...   .select(lower(users::name).frame_by(frame::Rows.frame_start_with(frame::CurrentRow)));
     |        ^^^^^^ unsatisfied trait bound
     |
     = help: the trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable` is not implemented for `diesel::sql_types::Text`
     = note: try to provide an expression that produces one of the expected sql types
help: the following other types implement trait `diesel::pg::expression::expression_methods::private::MultirangeOrRangeMaybeNullable`
    --> DIESEL/diesel/diesel/src/pg/expression/expression_methods.rs
     |
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Range<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `diesel::sql_types::Range<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Range<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<diesel::sql_types::Range<ST>>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Multirange<ST> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Multirange<ST>`
...
LL |     impl<ST: SingleValue> MultirangeOrRangeMaybeNullable for Nullable<Multirange<ST>> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Nullable<Multirange<ST>>`
     = note: required for `lower<Text, name>` to implement `diesel::Expression`
     = note: 1 redundant requirement hidden
     = note: required for `AggregateExpression<..., ..., ..., ..., ...>` to implement `diesel::Expression`
     = note: required for `users::table` to implement `SelectDsl<AggregateExpression<..., ..., ..., ..., ...>>`
  
     For more information about this error, try `rustc --explain E0277`.
